--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ theme = "hugo-theme-shell"
     use = true
     files = [
         ["Blog", "https://nicks-homelab.com/"],
-        ["CV", "/works/cv.md"],
+        ["CV", "content/works/cv.md"],
         ["GitHub", "https://github.com/HilkopterBob"],
         ["Imprint and legal notice", "https://libraryofbabel.info/"]
     ]
